pass build for java 8. add more logs